--- a/templates/convert_result.html
+++ b/templates/convert_result.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html lang="ru">
-	<head>
-		<title>Результат</title>
-	</head>
-
-	<body>
-		<strong> {{ msg }} </strong>
-	</body>
-</html>
+{% block result %}
+	<strong> {{ msg }} </strong>
+{% endblock %}
